fix container overlapping issue when navigating between tabs

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -155,10 +155,12 @@ header {
   bottom: 0;
   transition: opacity 0.2s linear;
   opacity: 0;
+  z-index: 1;
 }
 
 .container.active {
   opacity: 1;
+  z-index: 2;
 }
 
 #message,
